add api get notis and update when read noti
